<resources>
    <!--nome do app-->
    <string name="app_name">AppTCC</string>

    <!--strings da tela principal-->
    <string name="inicio">Início</string>
    <string name="str_btn1">Requisição </string>
    <string name="str_btn2">Urgência </string>
    <string name="str_btn3">Dúvida</string>
    <string name="str_btn4">Sinalizar</string>
    <string name="popUp_string">PopUp String</string>

    <!--strings de login/cadastro-->
    <string name="registrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmarSenha">Confirmar senha</string>
    <string name="professor">Sou professor</string>
    <string name="estudante">Sou estudante</string>
    <string name="voltar">Voltar</string>
    <string name="enviar">Enviar</string>
    <string name="excluir">Excluir Conta</string>

    <string name="mudarParaCadastro">Não possui uma conta? Clique aqui</string>
    <string name="mudarParaLogin">Já possui uma conta? Clique aqui</string>
    <string name="esqueciSenha">Esquceci minha senha</string>

    <string name="alertaExcluirConta">Deseja mesmo excluir sua conta?</string>
    <string name="msgExcluirConta">Digite "excluir conta"</string>
    <string name="excluirBtnText">Excluir</string>

    <string name="digite">Digite aqui</string>

    <!--strings da tela de configurações-->
    <string name="config">Configurações</string>
    <string name="sair">Sair da conta</string>
</resources>